# cplusminus-frontend

./: CMakeLists.txt  LICENSE  README.md  license.txt
.github/workflows/: .gitlab-ci.yml
ci/: build-antlr4.sh
examples/: articulation_points.cpp  articulation_points.in  bubble_sort.cpp  gcd.c  primes.cpp
src/: main.cpp
src/ast/: TranslationUnit.cpp  TranslationUnit.h  all_headers.h
src/ast/base/: Node.cpp  Node.h  SourceInfo.cpp  SourceInfo.h  node_ptr.cpp  node_ptr.h
src/ast/class/: AccessModifier.h  ClassDef.cpp  ClassDef.h  ClassHead.cpp  ClassHead.h  MemberAccessExpr.cpp  MemberAccessExpr.h  MemberDeclaration.cpp  MemberDeclaration.h  MemberDeclarator.cpp  MemberDeclarator.h  MemberDeclaratorList.cpp  MemberDeclaratorList.h  MemberSpecification.cpp  MemberSpecification.h
src/ast/decl/: Decl.cpp  Decl.h  Declarator.cpp  Declarator.h  EmptyDeclaration.cpp  EmptyDeclaration.h  FunctionDecl.cpp  FunctionDecl.h  InitDeclarator.cpp  InitDeclarator.h  SimpleDeclaration.cpp  SimpleDeclaration.h  declaration.h
src/ast/expr/: ArrToPtrExpr.cpp  ArrToPtrExpr.h  AssignmentExpr.cpp  AssignmentExpr.h  BinaryExpr.cpp  BinaryExpr.h  CallExpr.cpp  CallExpr.h  CastExpr.cpp  CastExpr.h  CommaExpr.cpp  CommaExpr.h  DefaultArgExpr.cpp  DefaultArgExpr.h  IdExpr.cpp  IdExpr.h  ImplicitThisExpr.cpp  ImplicitThisExpr.h  ImplicitTypeCastExpr.cpp  ImplicitTypeCastExpr.h  LValToRValExpr.cpp  LValToRValExpr.h  PostIncrExpr.cpp  PostIncrExpr.h  SizeofTypeExpr.cpp  SizeofTypeExpr.h  SubscriptExpr.cpp  SubscriptExpr.h  TernaryExpr.cpp  TernaryExpr.h  ThisExpr.cpp  ThisExpr.h  UnaryExpr.cpp  UnaryExpr.h  expr.h  operators.cpp  operators.h
src/ast/expr/literals/: BoolLiteral.cpp  BoolLiteral.h  CharLiteral.cpp  CharLiteral.h  FloatLiteral.cpp  FloatLiteral.h  IntLiteral.cpp  IntLiteral.h  NullptrLiteral.cpp  NullptrLiteral.h  StringLiteral.cpp  StringLiteral.h
src/ast/func/: FuncBody.cpp  FuncBody.h  FuncDef.cpp  FuncDef.h  Param.h
src/ast/stmt/: BreakStmt.cpp  BreakStmt.h  CompoundStmt.cpp  CompoundStmt.h  Condition.h  ContinueStmt.cpp  ContinueStmt.h  DeclarStmt.cpp  DeclarStmt.h  DoWhileStmt.cpp  DoWhileStmt.h  ExprStmt.cpp  ExprStmt.h  ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  ReturnStmt.cpp  ReturnStmt.h  WhileStmt.cpp  WhileStmt.h  forInitStmt.cpp  forInitStmt.h  stmt.h
src/ast_dumper/: AstDumper.cpp  AstDumper.h  README.md
src/ll_builder/: LLBuilder.cpp  LLBuilder.h
src/parser/: ParseTreeVisitor.cpp  ParseTreeVisitor.h  Parser.cpp  Parser.h
src/parser/grammar/: CPM.g4
src/semantic_checker/: SemanticChecker.cpp  SemanticChecker.h
src/semantic_checker/scope/: Class.h  Scope.cpp  Scope.h  ScopeValue.cpp  ScopeValue.h
src/type/: DerivedTypes.cpp  DerivedTypes.h  Type.cpp  Type.h  TypeManager.cpp  TypeManager.h
src/utils/: CompilationError.cpp  CompilationError.h  Context.cpp  Context.h
src/visitor_template/: Visitor.h
tests/: README.md  astdump.cpp  configure.cmake.h.in  parsing-invalid.cpp  run.cpp  sc-invalid.cpp
tests/invalid_inputs/: README.md
tests/invalid_inputs/old/: array_init_wrong_dim.cpp
tests/invalid_inputs/parsing/: class_ctor_forward_declaration.cpp  const_method.cpp  ctor_memory_initializer.cpp  func_vararg_no_params.cpp  multiple_const.cpp  negative_break_level.cpp  negative_continue_level.cpp  nullptr_t_declaration.cpp  paren_init_ptr.cpp  sizeof_function_type.cpp  var_name_as_class.cpp
tests/invalid_inputs/sema/: add_two_pointers.cpp  addr_of_function.cpp  array_of_func.cpp  array_of_void.cpp  array_wo_size.cpp  assign_into_array.cpp  assign_into_const_pointer.cpp  assign_into_const_simple.cpp  assign_into_function.cpp  assign_into_rvalue.cpp  break_level_too_big.cpp  call_too_few_args.cpp  call_too_many_args.cpp  cast_char_to_double.cpp  char_to_double.cpp  class_compare_instances.cpp  class_contains_array_of_itself.cpp  class_contains_array_of_itself_advanced.cpp  class_contains_itself.cpp  class_ctor_call_in_method.cpp  class_default_private.cpp  class_member_def_arg.cpp  class_member_name_collision.cpp  class_member_redeclaration.cpp  class_member_redefinition.cpp  class_method_call_object_ptr.cpp  class_method_call_ptr_object.cpp  class_method_forward_declaration.cpp  class_method_not_call.cpp  class_method_redefinition.cpp  class_method_same_name_as_field.cpp  class_private_member_access.cpp  class_private_method_call.cpp  class_redefine_this.cpp  class_redefinition.cpp  class_rvalue_member_access.cpp  class_tmp_object_member_access.cpp  class_unknown_member.cpp  const_corectness_double_ptr.cpp  const_elem_array_write.cpp  (+87 more)
tests/valid_inputs/: 2d_array.ast  2d_array.cpp  2d_array.in  ambiguous_ctor_call_or_func_declaration.ast  ambiguous_ctor_call_or_func_declaration.cpp  arr_plus_int.ast  arr_plus_int.cpp  array_access_const.ast  array_access_const.cpp  array_access_var.ast  array_access_var.cpp  array_addr_of.ast  array_addr_of.cpp  array_addr_of_adv.ast  array_addr_of_adv.cpp  array_as_vararg.ast  array_as_vararg.cpp  array_to_ptr_const_param.ast  array_to_ptr_const_param.cpp  assign.ast  assign.cpp  assign_and.ast  assign_and.cpp  assign_div.ast  assign_div.cpp  assign_left_shift.ast  assign_left_shift.cpp  assign_minus.ast  assign_minus.cpp  assign_mod.ast  assign_mod.cpp  assign_or.ast  assign_or.cpp  assign_plus.ast  assign_plus.cpp  assign_right_shift.ast  assign_right_shift.cpp  assign_star.ast  assign_star.cpp  assign_stays_lvalue.ast  (+316 more)
